# RRIP

./: .gitignore  CLAUDE.md  Evaluation_Setup_Lossless_Sources.md  IMPLEMENTATION.md  LEARNED_RESIDUAL_CODEC_PLAN.md  LEARNED_RESIDUAL_CODEC_RESEARCH.md  PERFORMANCE_EVALUATION.md  QUALITY_TUNING_GUIDE.md  QUICKSTART.md  README.md  RESIDUAL_DENOISING_PLAN.md  SINGLE_IMAGE_ORIGAMI_PROPOSAL.md  SINGLE_IMAGE_RRIP_PROPOSAL.md  comprehensive_perf_test.py  generate-evals.sh  notes.txt  package.json  perf_test.py  perf_test_uncached.py  performance_test_uncached.py  plan.md  pyproject.toml  quick_start.sh  requirements.txt  setup.py  simple_perf_test.py  test_lz4.rs  test_residual_quality.py  validate_reconstruction.py
cli/: __init__.py  bd_metrics.py  requirements_wsi_residual_tool.txt  wsi_residual_debug.py  wsi_residual_tool.py  wsi_residual_tool_grid.py
docs/: encode_time_optimizations.md  tile-server-encoding-workflow.md  wsi-storage-analysis-v2.md  wsi-storage-analysis.md  wsi_archive_cost_briefing.md
evals/: README.md  split-quality-research.md
evaluation/: EVALUATION_SUMMARY.md  GRID_EVALUATION.md  GRID_RESULTS_ANALYSIS.md  README_GRID.md  calculate_quality_metrics.py  compare_compression.py  evaluate_rrip_final.py  generate_grid_residuals.py  generate_jpeg_baselines.py  parameter_grid_test.py  quick_test.py  run_parameter_grid.py  run_rrip_evaluation.py  simple_evaluation.py  test_rrip_levels.py
examples/: basic_example.py  test_api.py  tile_example.py  visual_demo.py
generator-inversion/: demo_latent_reconstruct_patch.py  demo_make_base_and_residual.py  demo_make_montage_and_zip.py  gen_inv_full_report.py
geninv_codec/: CODEC_COMPARISON.md  ENHANCEMENT_MODEL_REPORT.md  README.md  RESEARCH_REPORT.md  TRAINING_PLAN.md  model.pt  requirements.txt  run_full_report.py  train_model.py
gpu-encode/: Cargo.toml  README.md  build.rs
gpu-encode/scripts/: encode-single-image.sh  encode-wsi.sh  pod-setup.sh  profile-wsi.sh  resource-monitor.sh
gpu-encode/src/: dicom.rs  main.rs  nvjpeg.rs  pipeline.rs  validate.rs
gpu-encode/src/kernels/: composite.cu  downsample.cu  mod.rs  optl2.cu  residual.cu  sharpen.cu  upsample.cu
learned_codec/: export.py  generate_residual_dataset.py  model.py  requirements.txt  train.py
models/: dual.onnx  dual_200ep.onnx  dual_200ep_int8.onnx  dual_best.pt  dual_fft.onnx  dual_fft_int8.onnx  dual_int8.onnx  espcnr.onnx  espcnr_best.pt  espcnr_int8.onnx  large_best.pt  model_cards.json  model_sr.onnx  model_sr_int8.onnx  refine_16ch10b_best.pt  refine_16ch15b.onnx  refine_16ch15b_best.pt  refine_16ch15b_edge_best.pt  refine_16ch15b_int8.onnx  refine_16ch20b_best.pt  refine_16ch25b_best.pt  refine_32ch5b_best.pt  refine_8ch10b_best.pt  refine_8ch15b.onnx  refine_8ch15b_best.pt  refine_8ch15b_edge_best.pt  refine_8ch15b_int8.onnx  refine_8ch3b_best.pt  stage1_best.pt  wsisrx4.onnx  wsisrx4_int8.onnx  wsisrx4_v2_best.pt
notebooks/: origami_pipeline_demo.ipynb  wsi_residual_pyramid_tool.ipynb
paper/: CLAUDE.md  Executive_Summary.md  Makefile  ORIGAMI_Paper_Draft.md  PAPER_IMPROVEMENT_PLAN.md  Paper_Formatting_Guide.md  RRIP_Paper_Draft.md  baseline-comparison-strategy.md  build_paper.sh  compression_analysis_summary.md  evaluation_methodology_jpeg_source.md  generate_figures.py  install_latex_packages.sh  origami-paper.md  origami_paper.aux  origami_paper.blg  origami_paper.tex  origami_paper_article.aux  origami_paper_article.blg  origami_paper_article.out  origami_paper_article.tex  other-methods.md  prior_work_notes.md  references.bib  rrip_paper.aux  rrip_paper.out  rrip_paper.tex  rrip_paper_article.aux  rrip_paper_article.out  rrip_paper_article.tex  scientific-validation-plan.md  updated-paper-structure.md
plans/: initial-spec.md  sqlite-tile-server.md
rrip/: __init__.py  cli.py  decoder.py  encoder.py  server.py  tile_manager.py
scripts/: build_jpegli.sh  build_mozjpeg.sh  create_homepage_pyramids.sh  dicom_to_dzi.py  install_jpegli.sh  prep_tile_server.py  prepare_demo_slide.sh  recompress_jpeg.py  retile_pyramid.py  retile_pyvips.py  setup_slides_root.sh  tissue_detect.py  (+3 more)
server/: .dockerignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  HYPER_OPTIMIZATION_PLAN.md  INTEGRATION_GUIDE.md  OPTIMIZATION_STATUS.md  OPTIMIZATION_SUMMARY.md  README.md  build.rs  build.sh  create-test-data.sh  dashmap_optimization.md  docker-compose.yml  load_test.sh  profile.sh  run-server.sh  simple_load.sh  test_performance.sh
server/csrc/: libjpeg_compress.c
server/src/: bench_jxl_vs_jpeg.rs  decode.rs  encode.rs  fast_upsample.rs  fast_upsample_ycbcr.rs  ingest.rs  lib.rs  main.rs  main_optimized.rs  metrics_optimized.rs  optimized.rs  parallel_generation.rs  serve.rs  simple_pack_compression_test.rs  turbojpeg_optimized.rs
server/src/core/: color.rs  jpeg.rs  libjpeg_ffi.rs  mod.rs  optimize_chroma.rs  optimize_l2.rs  pack.rs  pyramid.rs  reconstruct.rs  residual.rs  sharpen.rs  sr_model.rs  upsample.rs  wavelet.rs
server/tests/: integration_test.rs  visual_quality_test.rs
(+273 files in other folders)
