[package]
name = "origami-gpu-encode"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated WSI encoding pipeline for ORIGAMI using CUDA"

[[bin]]
name = "origami-gpu-encode"
path = "src/main.rs"

[dependencies]
# CUDA runtime bindings (safe wrapper)
cudarc = { version = "0.19", features = ["cuda-12060"] }

# DICOM parsing
dicom = "0.8"

# Shared types from origami server (pack format, color, residual math)
origami = { path = "../server" }

# Compression
lz4_flex = "0.11"

# Parallelism
rayon = "1.10"

# Error handling & CLI
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization (for config, summaries)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing (for Lanczos downsample on CPU, image loading)
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# JPEG encoding for pyramid generation (CPU fallback)
turbojpeg = "1.0"

# WebP encoding for L2 RGB residuals (only CPU operation)
webp = "0.3"

# GPU monitoring via NVML (for --profile resource utilization)
nvml-wrapper = "0.12"

[build-dependencies]
cc = "1.0"
