[package]
name = "rrip-tile-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
moka = { version = "0.12", features = ["sync"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
turbojpeg = "0.5"
memmap2 = "0.9"
sysinfo = "0.30"
crossbeam = "0.8"
parking_lot = "0.12"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "test-util"] }

[profile.release]
debug = true
