[package]
name = "origami"
version = "0.1.0"
edition = "2021"
default-run = "origami"

[[bin]]
name = "origami"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.7"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
moka = { version = "0.12", features = ["sync"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
turbojpeg = "0.5"
memmap2 = "0.9"
sysinfo = "0.30"
crossbeam = "0.8"
parking_lot = "0.12"
lz4_flex = "0.11"
libc = "0.2"
jpegxl-rs = { version = "0.11", optional = true, features = ["vendored"] }
webp = "0.3"

[features]
default = []
mozjpeg = []   # Links pre-built mozjpeg via build.rs (see scripts/build_mozjpeg.sh)
jpegli = []    # Links pre-built jpegli via build.rs (see scripts/build_jpegli.sh)
jpegxl = ["jpegxl-rs"]  # Statically builds and links libjxl via vendored feature

[[bin]]
name = "test_pack_compression"
path = "src/simple_pack_compression_test.rs"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "test-util"] }

[profile.release]
debug = true
